Fix padding todo item CSS spacing

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -296,6 +296,7 @@ header h1 {
 .content-main button.add-todo {
   padding: 1.2rem;
   width: 100%;
+  min-height: 64px;
   display: flex;
   align-items: center;
   gap: 0.5rem;
@@ -327,6 +328,9 @@ header h1 {
 .todos-container {
   display: flex;
   flex-direction: column;
+  margin-top: 0.5rem;
+  padding-top: 0.5rem;
+  gap: 0.5rem;
   border-top: 1px solid var(--sidebar-content-border);
 }
 
@@ -343,7 +347,7 @@ header h1 {
 }
 
 .todo h3 {
-  font-size: 1.1rem;
+  font-size: 18px;
   font-weight: 700;
   white-space: nowrap;
   overflow: hidden;
@@ -369,6 +373,8 @@ header h1 {
   grid-column: 4;
   font-style: italic;
   justify-self: end;
+  white-space: nowrap;
+  min-width: max-content;
 }
 
 .completed {
